# datafusion-bio-formats

./: .pre-commit-config.yaml  Cargo.toml  README.md  docker-compose.yaml  rustfmt.toml
.github/workflows/: ci.yml
datafusion/bio-format-bam/: Cargo.toml
datafusion/bio-format-bam/examples/: test_reader.rs
datafusion/bio-format-bam/src/: lib.rs  physical_exec.rs  storage.rs  table_provider.rs
datafusion/bio-format-bed/: Cargo.toml
datafusion/bio-format-bed/examples/: test_reader.rs
datafusion/bio-format-bed/src/: async_reader.rs  lib.rs  physical_exec.rs  storage.rs  table_provider.rs
datafusion/bio-format-core/: Cargo.toml
datafusion/bio-format-core/src/: lib.rs  object_storage.rs  table_utils.rs
datafusion/bio-format-fasta/: Cargo.toml
datafusion/bio-format-fasta/examples/: test_reader.rs
datafusion/bio-format-fasta/src/: storage.rs
datafusion/bio-format-fastq/: Cargo.toml
datafusion/bio-format-fastq/examples/: test_reader.rs
datafusion/bio-format-fastq/src/: physical_exec.rs  storage.rs  table_provider.rs
datafusion/bio-format-gff/: Cargo.toml
datafusion/bio-format-gff/examples/: test_reader.rs
datafusion/bio-format-gff/src/: lib.rs  physcial_exec.rs  storage.rs  table_provider.rs
datafusion/bio-format-vcf/: Cargo.toml
datafusion/bio-format-vcf/examples/: datafusion_integration multinode.rs  datafusion_integration.rs
datafusion/bio-format-vcf/src/: physical_exec.rs  storage.rs  table_provider.rs
datafusion/vcf/: Cargo.toml
datafusion/vcf/examples/: bgzf.rs  bgzf_test.rs  datafusion_integration.rs  exon_test.rs  iceberg_datafusion_integration.rs  iceberg_integtegration.rs  iceberg_table_test.rs  iceberg_test_namespace.rs  noodles_test.rs
datafusion/vcf/src/: lib.rs  physical_exec.rs  storage.rs  table_provider.rs  vcf_reader.rs
datafusion/vcf/testdata/: mock_chr21.vcf  mock_chr21.vcf.bgz  mock_chr21.vcf.bgz.tbi
sandbox/: .test3.bed.swp  chr16_fragile_site.bed.bgz  example.fastq.bgz  test3.bed
