[workspace]
resolver = "2"

members = [
    "datafusion/vcf",
]

[workspace.dependencies]
rust-htslib = { version = "0.48.0" , features = ["gcs","s3","libdeflate"] }
datafusion = "43.0.0"
datafusion-execution = "43.0.0"
arrow-schema = "53.2.0"
arrow = "53.2.0"
async-trait = "0.1.86"
object_store = { version = "0.11"}

