[package]
name = "datafusion-bio-format-bam"
version = "0.1.0"
edition = "2024"

[dependencies]
datafusion.workspace = true
opendal.workspace = true
noodles-bgzf.workspace = true
tokio-util.workspace = true
tokio.workspace = true
bytes.workspace = true
datafusion-bio-format-core = {path = "../bio-format-core"}
futures.workspace = true
futures-util.workspace = true
noodles-bam = {version = "0.81.0" , features = ["async"]}
noodles-sam = "0.77.0"
async-stream = "0.3.6"
log = "0.4.27"
async-trait = "0.1.88"

[[example]]
name = "test_reader"

path = "./examples/test_reader.rs"