[package]
name = "bio-format-fasta"
version = "0.1.0"
edition = "2024"

[dependencies]
datafusion.workspace = true
opendal.workspace = true
noodles.workspace = true
tokio-util.workspace = true
tokio.workspace = true
bytes.workspace = true
datafusion-bio-format-core = {path = "../bio-format-core"}
noodles-fasta = {version = "0.9.0", features = ["async"]}
futures.workspace = true
futures-util.workspace = true
async-compression.workspace = true
async-stream.workspace = true
log = "0.4.27"

[[example]]
name = "test_reader"
# Some issue when publishing and path isn't specified, so adding here
path = "./examples/test_reader.rs"