[package]
name = "datafusion-bio-format-fastq"
version = "0.1.0"
edition = "2024"

[dependencies]
datafusion.workspace = true
opendal.workspace = true
noodles.workspace = true
tokio-util.workspace = true
tokio.workspace = true
bytes.workspace = true
datafusion-bio-format-core = {path = "../bio-format-core"}
noodles-fastq = {version = "0.19.0", features = ["async"]}
futures.workspace = true
futures-util.workspace = true
async-compression.workspace = true
async-stream = "0.3.6"
log = "0.4.27"
async-trait = "0.1.88"

[[example]]
name = "test_reader"
# Some issue when publishing and path isn't specified, so adding here
path = "./examples/test_reader.rs"