[package]
name = "datafusion-bio-format-gff"
version = "0.1.0"
edition = "2024"

[dependencies]
datafusion.workspace = true
opendal.workspace = true
noodles.workspace = true
tokio-util.workspace = true
tokio.workspace = true
bytes.workspace = true
async-compression.workspace = true
async-stream.workspace = true
datafusion-bio-format-core = {path = "../bio-format-core"}
futures.workspace = true
futures-util.workspace = true
async-trait.workspace = true

noodles-gff = {version = "0.50.0", features = ["async"]}
log = "0.4.27"
env_logger = "0.11.8"

[[example]]
name = "test_reader"
# Some issue when publishing and path isn't specified, so adding here
path = "./examples/test_reader.rs"