[package]
name = "datafusion-bio-format-vcf"
version = "0.1.0"
edition = "2024"

[dependencies]
datafusion.workspace = true
datafusion-execution.workspace = true
async-trait.workspace = true
opendal.workspace = true
noodles.workspace = true
noodles-bgzf.workspace = true
tokio-util.workspace = true
tokio.workspace = true
bytes.workspace = true
futures.workspace = true
async-stream.workspace = true
async-compression.workspace = true

datafusion-bio-format-core = {path = "../bio-format-core"}

log = "0.4.22"
env_logger = "0.10.0"
criterion = "0.4.0"
sysinfo = "0.28.4"
json = "0.12.4"
csv = "1.3.1"
serde_json = "1.0.140"
serde = "1.0.219"
libc = "0.2.174"

[[example]]
name = "datafusion_integration"
# Some issue when publishing and path isn't specified, so adding here
path = "./examples/datafusion_integration.rs"

[[example]]
name = "datafusion_integration_multinode"
# Some issue when publishing and path isn't specified, so adding here
path = "./examples/datafusion_integration multinode.rs"
