[package]
name = "datafusion-vcf"
version = "0.1.0"
edition = "2024"

[dependencies]
datafusion.workspace = true
datafusion-execution.workspace = true
async-trait.workspace = true

futures = "0.3.31"

noodles = { version = "0.91.0",  features = ["bam", "sam", "vcf", "bgzf", "async"] }
noodles-bgzf = { version = "0.36.0" ,features = ["libdeflate"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "rt", "macros"] }
object_store = {version = "0.11.2", features = ["gcp"] }
tokio-util = {  version="0.7.13", features =["io-util"] }
bytes = "1.10.0"
opendal = { version = "0.51.2", features = ["services-gcs", "services-s3","layers-blocking"] }
log = "0.4.22"
env_logger = "0.11.6"
async-stream = "0.3.6"

[[example]]
name = "datafusion_integration"
# Some issue when publishing and path isn't specified, so adding here
path = "./examples/datafusion_integration.rs"